# ChessEngine

./: .gitignore  CMakeLists.txt  README.md
include/: BitBoards.hpp  Board.hpp  Evaluation.hpp  Move.hpp  MoveGenerator.hpp  Search.hpp  UCIInterface.hpp
src/: BitBoards.cpp  Board.cpp  Evaluation.cpp  Move.cpp  MoveGenerator.cpp  Search.cpp  UCIInterface.cpp  main.cpp
src/GUIStuff/: RenderData.cpp  RenderData.hpp  TextureManager.cpp  TextureManager.hpp  View.cpp  View.hpp
src/opening/: Opening.cpp  Opening.hpp
